<resources>
    <string name="app_name">Books App</string>
    <string name="LoginTitle">Login</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="registerText">Don\'t have an account? Click here</string>
    <string name="loginButtonText">Login</string>
    <string name="welcomeText">Welcome</string>
    <string name="loginSuccessfully">Login successfully</string>
    <string name="invalidUsernameErr">The username is empty or the email is invalid</string>
    <string name="invalidPasswordError">The password must have at least 3 characters!</string>
    <string name="loginAlertDialogTitle">Login error</string>
    <string name="loginUndefinedErrorText">Something went wrong. Please try again!</string>
    <string name="registerPageTitle">Register</string>
    <string name="emailRegisterHint">Email</string>
    <string name="confirm_passwordRegisterHint">Confirm password</string>
    <string name="registerButtonText">Register</string>
    <string name="registrSuccessfullyMessage">Registration Successfully</string>
    <string name="passwordFailedErrorMsg">The passwords did not match or the password you entered is too weak!\n (It must have at least 3 characters)</string>
    <string name="undefinedRegisterError">Something went wrong, please try again!</string>
    <string name="errorRegisterDialogTitle">Register Error</string>
    <string name="successRegisterDialogTitle">Congrats!</string>
    <string name="successRegisterDialogMsg">Your account has been created successfully! Press OK to Login now!</string>
    <string name="failedCredentialsRegisterMsg">The fields are empty or the email is wrong!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_addNewBook">Add a new book</string>
    <string name="title_editBook">Edit Book</string>
    <string name="navBooksMenuItemTitle">Books</string>
    <string name="navProfileMenuItemTitle">Profile</string>
    <string name="test">Profile Fragment</string>
    <string name="getBooksErrorMessage">Something went wrong!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addBookErrorMessage">Something went wrong! Try again to add the book.</string>
    <string name="editBookErrorMessage">Something went wrong! Please try again to edit the book.</string>
</resources>
